feat(README): split README for each subcommand